# HealthtechParseMatch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DEMO_README.md  DEVELOPMENT.md  Dockerfile  FEATURES.md  README.md  REQUEST_TEMPLATE.md  ROADMAP-DOB-PIPELINE.md  ROADMAP.md  demo_workflow.py  docker-compose.yml  grafana-dashboard-provider.yml  prometheus.yml  pyproject.toml  pyproject.toml.bak  request-milestone-1.1.md  request-milestone-1.2.md  test_output.txt  tracked-files.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: config.py  db.py  db_manage.py  main.py  models.py  schemas.py
app/clients/: deepgram_client.py  fhir_client.py  redox_client.py  transcribe_client.py
app/core/: auth.py  config.py  context.py  distributed_rate_limiter.py  middleware.py  redaction.py
app/db/: db.py  db_manage.py  test_db.py
app/integrations/: redox_gateway.py
app/models/: __init__.py  assignment.py  dob_pipeline.py  dob_training_db.py  employee.py  modelbase.py  project.py
app/routers/: asr_router.py  assignments_router.py  dob_llm_router.py  dob_pipeline_router.py  dob_router.py  employees_router.py  health_router.py  patient_router.py  projects_router.py  zip_router.py
app/schemas/: assignment_schema.py  employee_schema.py  project_schema.py
app/services/: azure_openai_adapter.py  cache_service.py  dob_data_fetcher.py  dob_llm_extractor.py  dob_llm_reranker.py  dob_parser.py  dob_pipeline.py  dob_pipeline_service.py  idempotency_service.py  llm_adapter.py  llm_utils.py  matcher.py  message_bus.py  redis_service.py  scoring.py  zip_parser.py
app/utils/: logger.py  logging_config.py
docs/: dashboard_preview.md  grafana_dashboard.json  grafana_setup.md  partners.md  postman_collection.json  security.md  slo.md
healthtech_sdk/: README.md  __init__.py  client.py  pyproject.toml
k8s/: README.md  configmap.yaml  deployment.yaml  secret.yaml  service.yaml
notes/: redox_quickstart.md
scripts/: deepgram_mic_demo.py  mic_to_deepgram.py  redox_assertion.py  redox_client_example.py  run_integration_tests.py  test_mic.py  test_redox_client_simple.py  validate.py  ws_test.py
tests/: INTEGRATION_TESTS.md  conftest.py  test_assignments.py  test_auth_basics.py  test_auth_more.py  test_config.py  test_dob_parser.py  test_dob_pipeline.py  test_employees.py  test_health.py  test_integration_slo.py  test_message_bus.py  test_patient_router.py  test_projects.py  test_rate_limit_extra.py  test_redis_services.py  test_redox_client.py  test_redox_gateway.py  test_setup.py
tools/: create_dob_tables.py  ensure_db.py
