[project]
name = "fastapi_demo"
version = "0.1.0"
description = "FastAPI scaffold project"
authors = [{name = "Curtis Jones", email = "curtisjonesknox@gmail.com"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "pytest-asyncio",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.28.1",
    "mypy>=1.10.0",
    "ruff>=0.6.0",
    "black>=24.4.2",
    "pre-commit>=3.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
