[project]
name = "app"
version = "0.2.0"
description = "HealthtechParseMatch project"
authors = [{ name = "Curtis Jones", email = "curtisjonesknox@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "pydantic[email]>=2.7",
  "asgi-lifespan>=1.0.0",
  "boto3>=1.30.0",
  "jsonschema>=4.17.3",
  "openai>=1.0.0",
  "PyJWT",
  "cryptography",
  "requests",
  "prometheus-client>=0.20.0",
  "aiokafka>=0.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=4.1.0",
  "pytest-docker>=1.1.0",
  "black>=24.8.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "httpx>=0.27.0",
  "pre-commit>=3.7.0",
  "aiosqlite>=0.20.0",
  "sounddevice",
  "websockets",
  "numpy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# QUOTED because of the hyphen in "package-data"
[tool.setuptools."package-data"]
app = ["static/*", "static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 125
target-version = ["py313"]

[tool.ruff]
line-length = 125
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

# QUOTED because of the hyphens in "per-file-ignores"
[tool.ruff.lint."per-file-ignores"]
"app/main.py" = ["E402"]

[tool.mypy]
python_version = "3.13"
plugins = ["sqlalchemy.ext.mypy.plugin"]
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
disallow_untyped_defs = false
check_untyped_defs = false
exclude = ["build/"]

[[tool.mypy.overrides]]
module = ["fastapi.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncpg"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["websockets"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["websockets.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jwt"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["prometheus_client"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cryptography"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cryptography.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anyio"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asgi_lifespan"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["httpx"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pydantic_settings"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dotenv"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["boto3"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sounddevice"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["prometheus_client"]
ignore_missing_imports = true
